chore/ui: corrigir warnings do Badge, ajustar prompt PWA e drawer
- força overlap='rectangular' e atualiza estilos do Badge
- implementa diálogo explicativo do PWA com cache por sessão/dia
- remove fechamento automático do menu lateral e melhora UXrigir warnings do Badge, ajustar prompt PWA e drawer

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,8 +14,13 @@
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta http-equiv="Expires" content="0">
-	<script src="https://cdn.tailwindcss.com"></script>
 	<style>
+		body {
+			background: #ffffff;
+			color: #111827;
+			font-family: 'Inter', sans-serif;
+		}
+
 		#splash-screen {
 			position: fixed;
 			inset: 0;
@@ -74,7 +79,7 @@
 	</script>
 </head>
 
-<body class="bg-white text-gray-900 font-inter">
+<body>
 	<div id="splash-screen">
 		<div class="loading-spinner"></div>
 		<div class="progress-bar">
